fix: [500] Apply same spacing as recently made to 404 page in parallel PR

--- a/src/pages/Error/error.less
+++ b/src/pages/Error/error.less
@@ -3,7 +3,7 @@
    Page-specific styles for the error pages.
    ========================================================================== */
 .error_action_container {
-  margin: 30px 0;
+  margin: 0;
 }
 .error_action_container .a-btn {
   display: inline-block;
@@ -12,7 +12,7 @@
 @media only all and (min-width: 37.5625em) {
   .error_action_container {
     display: table;
-    margin: 30px 0;
+    margin: 15px 0 0;
   }
   .error_action_container .error_action_col {
     display: table-cell;
@@ -23,7 +23,7 @@
     border-right: 1px solid #b4b5b6;
   }
   .error_action_container .a-btn {
-    margin: 0.46875em 0;
+    margin: 0;
   }
 
   .error_action_container .contact-us {
@@ -40,6 +40,11 @@
   width: 100%;
   border-width: 0 !important;
 }
+
+.error-details-wrapper {
+  margin-top: 30px;
+}
+
 @media only all and (min-width: 37.5625em) {
   .error_copy_container {
     display: inline-block;
